# cosmic-noodle

./: Cargo.toml  README.md  report.md
assets/model/: class_name.txt  yolov8-taco-classes.yaml
examples/: detect_object.py  evaluate_object.py
src/: camera.rs  consts.rs  main.rs  types.rs
src/gui/: app.rs  config.rs  home.rs  mod.rs  view.rs
src/gui/screens/: camera.rs  mod.rs  system_information.rs
src/onnx/: iou.rs  mod.rs  onnx_session.rs  onnx_thread.rs
